# fastermail

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  ace.toml
.claude/: session-state.md
.skills/: general-coding.md  rust-coding.md
docs/decisions/: 2026-06-18-no-integration-tests.md  2026-06-21-jmap-library-and-backup-primitives.md
docs/guides/: backup.md  keep-going.md  regular-use.md  releasing.md  scripting.md
docs/notes/: 2026-06-18-release-tooling-and-v0.1.0.md  2026-06-19-backup-capability-feature-request.md  2026-06-21-afk-implementation-plan.md  2026-06-21-layering-rearchitect-plan.md  2026-06-24-backup-tooling-and-overnight-run.md  2026-07-02-backup-manifest-divergence.md
docs/reference/: cli.md
docs/spec/: architecture.md  how-it-works.md  jmap.md  overview.md  testing.md
scripts/: _shard.sh  backup-mail.sh  backup-parallel.sh  backup-worker.sh  build-all.sh  install.sh  reindex.sh  release.sh  sort.sh
specs/: README.md  architecture.md  cli.md  jmap.md  protocol.md  testing.md
specs/tools/: README.md  create_contact.md  create_event.md  create_masked_email.md  delete_contact.md  delete_event.md  get_contacts.md  get_emails.md  get_events.md  list_address_books.md  list_calendars.md  list_masked_emails.md  move_email.md  search_contacts.md  search_events.md  set_vacation_response.md  update_contact.md  update_event.md
src/: config.rs  error.rs  json.rs  lib.rs  logging.rs  main.rs  present.rs  recorder.rs
src/actions/: contact.rs  email.rs  identity.rs  mailbox.rs  masked_email.rs  mod.rs  vacation.rs
src/cli/: contacts.rs  emails.rs  identities.rs  io.rs  mailboxes.rs  masked_emails.rs  mod.rs  resolve.rs  vacation.rs
src/jmap/: client.rs  email.rs  (+6 more)
www/: README.md  architecture.md  usage.md
(+19 files in other folders)
